infrastructure/base/controllers/monitoring/istio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - grafana.${DOMAIN}
  gateways:
    - istio-system/fin-gw
  http:
    - name: primary
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
      timeout: 300s
